--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,11 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@v2.1.1
+        uses: actions/checkout@v2
       - name: node
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
-          repository-url: https://registry.npmjs.org
+          node-version: '14'
       - name: add dependency
         run: npm install
       - name: build
