--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,9 +18,7 @@ jobs:
           node-version: '14'
       - name: add dependency
         run: npm install
-      - name: build
-        run: npm run build
       - name: publish
-        run: npm publish --access public
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_auth_token}}
