token directly insert

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,4 @@ jobs:
       - name: publish
         run: npm publish --access public
         env:
-          NPM_TOKEN: ${{secrets.TEMP}}
+          NPM_TOKEN: '61fa5712-e97f-4ceb-b91d-213aee1eb108'
