--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,16 +12,14 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+
       - name: node
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+
       - name: add dependency
         run: npm install
-      - name: publish
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: document build
         run: npm run build-storybook
@@ -36,3 +34,14 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-northeast-2
           SOURCE_DIR: 'storybook-static'
+      
+      - name: ready publish 1 => copy package.json to lib
+        run: cp package.json lib
+      
+      - name: ready publish2 => mv directory to lib
+        run: cd lib
+
+      - name: publish
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
