--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
       "target": "es5",
-      "outDir": "lib",
+      "outDir": "./",
       "lib": [
         "dom",
         "dom.iterable",
         "esnext"
       ],
       "declaration": true,
-      "declarationDir": "lib",
+      "declarationDir": "./",
       "allowJs": true,
       "skipLibCheck": true,
       "esModuleInterop": true,
@@ -28,6 +28,5 @@
     ],
     "exclude": [
         "node_modules",
-        "lib"
     ]
   }
