--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
       "target": "es5",
-      "outDir": "./",
+      "outDir": "lib",
       "lib": [
         "dom",
         "dom.iterable",
         "esnext"
       ],
       "declaration": true,
-      "declarationDir": "./",
+      "declarationDir": "lib",
       "allowJs": true,
       "skipLibCheck": true,
       "esModuleInterop": true,
@@ -25,8 +25,11 @@
     "include": [
       "**/*.ts",
       "**/*.tsx",
+      "**/*.css",
+      "**/*.svg"
     ],
     "exclude": [
         "node_modules",
+        "lib"
     ]
   }
