--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodoc-ui",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "Goodoc design system on react",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
     "build-storybook": "build-storybook",
     "build": "rollup -c",
     "prepublishOnly": "yarn build"
@@ -26,9 +26,9 @@
       "url": "https://goodoc.io"
     },
     {
-      "name":"윤줴",
-      "email":"besoftyoon@gmail.com",
-      "url":"https://github.com/yoonjoohye"
+      "name": "윤줴",
+      "email": "besoftyoon@gmail.com",
+      "url": "https://github.com/yoonjoohye"
     }
   ],
   "np": {
@@ -50,6 +50,7 @@
     "@storybook/addon-essentials": "^6.1.9",
     "@storybook/addon-links": "^6.1.9",
     "@storybook/react": "^6.1.9",
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.1",
@@ -58,6 +59,7 @@
     "rollup": "^2.34.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-react-svg": "^3.0.3",
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.1.2"
