--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodoc-ui",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Goodoc design system on react",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -19,12 +19,12 @@
     "build": "rollup -c",
     "prepublishOnly": "yarn build"
   },
-  "author": {
-    "name": "goodoc",
-    "email": "dany.kwak@goodoc.co.kr",
-    "url": "https://goodoc-ui.goodoc.co.kr"
-  },
   "contributors": [
+    {
+      "name": "goodoc",
+      "email": "dany.kwak@goodoc.co.kr",
+      "url": "https://goodoc.io"
+    },
     {
       "name": "윤줴",
       "email": "besoftyoon@gmail.com",
